crates/marain-core/tests/fixtures/errors/19_fstring_expression_hole.lat
dic f"{^a plus ^b}".
